language/move-prover/tests/sources/global_vars.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/global_vars.move:32:9 ───
    │
 32 │         ensures sum_of_T == old(sum_of_T) + 1;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/global_vars.move:28:5: pack_invalid (entry)
    =     at tests/sources/global_vars.move:28:5: pack_invalid (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/global_vars.move:55:9 ───
    │
 55 │         ensures sum_of_T == old(sum_of_T);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/global_vars.move:50:5: unpack_invalid (entry)
    =     at tests/sources/global_vars.move:51:19: unpack_invalid
    =         t = <redacted>
    =     at tests/sources/global_vars.move:52:9: unpack_invalid
    =         x = <redacted>
    =     at tests/sources/global_vars.move:50:5: unpack_invalid (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/global_vars.move:89:9 ───
    │
 89 │         ensures sum_of_T == old(sum_of_T);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/global_vars.move:82:5: update_invalid (entry)
    =     at tests/sources/global_vars.move:83:13: update_invalid
    =     at tests/sources/global_vars.move:84:37: update_invalid
    =         t = <redacted>
    =     at tests/sources/global_vars.move:64:5: update_valid_still_mutating (entry)
    =     at tests/sources/global_vars.move:65:19: update_valid_still_mutating
    =         t = <redacted>,
    =         t = <redacted>
    =     at tests/sources/global_vars.move:64:5: update_valid_still_mutating (exit)
    =     at tests/sources/global_vars.move:84:9: update_invalid
    =     at tests/sources/global_vars.move:82:5: update_invalid (exit)

error:  A postcondition might not hold on this return path.

     ┌── tests/sources/global_vars.move:124:9 ───
     │
 124 │         ensures sum_of_S == old(sum_of_S) + 1;
     │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/global_vars.move:117:5: update_invalid_S (entry)
     =     at tests/sources/global_vars.move:118:13: update_invalid_S
     =     at tests/sources/global_vars.move:119:17: update_invalid_S
     =         r = <redacted>,
     =         s = <redacted>
     =     at tests/sources/global_vars.move:120:15: update_invalid_S
     =         r = <redacted>
     =     at tests/sources/global_vars.move:117:5: update_invalid_S (exit)
